# haskell-programming

./: readme.md
ch10-folding/: fold.hs
ch11/: btree.hs  razor.hs
ch11-adt/: adt.hs  ch11ex.hs  farm.hs  phone.hs
ch12/: EitherLib.hs  MaybeLib.hs  StringProcessing.hs
ch12-signaling-adversity/: EqCaseGuard.hs  Naturals.hs  Unfold.hs  nothing.hs
ch13/: Palindrome.hs
ch13-building-projects/: GimmePerson.hs
ch13-building-projects/hangman/: hangman.cabal
ch13-building-projects/hangman/src/: Hangman.hs  Main.hs
ch13-building-projects/hangman/test/: tests.hs
ch13-building-projects/hello/exe/: Main.hs
ch13-building-projects/hello/src/: Hello.hs
ch13/hangman/src/: Main.hs
ch13/hello/: hello.cabal
ch13/hello/src/: DogsRule.hs
ch14-testing/: ArbitrarySamples.hs
ch14-testing/addition/: addition.cabal
ch14-testing/exercises/: exercises.cabal
ch14-testing/exercises/src/: WordNumber.hs
ch14-testing/exercises/tests/: WordNumberTest.hs
ch14-testing/morse/: morse.cabal
ch14-testing/morse/src/: Main.hs  Morse.hs
ch14-testing/morse/tests/: tests.hs
ch14/addition/: Addition.hs
ch15-monoid-semigroup/: Madness.hs  Monoids.hs
ch15-monoid-semigroup/exercises/: exercises.cabal
ch15-monoid-semigroup/orphan-instance/: Listy.hs  ListyInstnaces.hs
ch16-functior/: HeavyLifting.hs  ReplaceExperement.hs
ch16-functior/functors/: functors.cabal
ch16-functior/functors/src/: Main.hs  (+3 more)
ch17-applicative/appl/: README.md  appl.cabal
ch18-monad/: Bind.hs
ch18-monad/exercises/: README.md  exercises.cabal
ch20-foldable/foldable/: foldable.cabal
ch21-traversable/traversable/: traversable.cabal
ch22-reader/reader/: reader.cabal
ch23-state/state/: Exercises.hs  state.cabal
ch24-parser/parser/: README.md  parser.cabal
ch25-composing-types/composing/: README.md  composing.cabal
ch26-monad-transformers/mt/: mt.cabal
ch28-basic-libraries/basic-libraries/: basic-libraries.cabal
ch9-lists/: lists.hs
fingerd/: finger.db  fingerd.cabal
fingerd/src/: DB.hs  Main.hs
unsorted/: Constructing.hs  FunctionWithWhere.hs  arith2.hs  arith3brocken.hs  cipher.hs  greetIfCool.hs  highOrderFunctions.hs  integralDivision.hs  learn.hs  matchingTuples1.hs  partial.hs  polimorphism.hs  print1.hs  print3flipped.hs  recurtion.hs  registeredUser1.hs  registeredUser2.hs  some-data.hs  sting.hs  string-exersises.hs  test.hs  type-inference1.hs  typeClasses.hs  wordNumber.hs
(+59 files in other folders)
