name:                hangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
      Hangman  
  ghc-options: -Wall -fwarn-tabs
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , split
    , random
  default-language: Haskell2010


executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules: Hangman
  default-language:    Haskell2010
  ghc-options: -Wall -fno-warn-orphans
  build-depends:       base >= 4.7 && < 5
                    , hangman
                    , random
                    , split
                    , containers
                    , QuickCheck
  default-language: Haskell2010                   

test-suite tests
  ghc-options: -Wall -fno-warn-orphans
  type: exitcode-stdio-1.0
  main-is: tests.hs
  hs-source-dirs:
      test
  build-depends:
      base >=4.7 && <5
    , hangman 
    , containers
    , QuickCheck
  default-language: Haskell2010
