name:                exercises
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/exercises#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library 
  hs-source-dirs:      src
  exposed-modules:     WordNumber
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , QuickCheck

test-suite tests
  ghc-options: -Wall -fno-warn-orphans
  type: exitcode-stdio-1.0
  main-is: WordNumberTest.hs
  hs-source-dirs:
      tests
  build-depends:
      base >=4.7 && <5
    , exercises
    , containers
    , hspec
    , QuickCheck
  default-language: Haskell2010                     
